--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,10 @@
   }
 }
 
+header{
+  background-image:url("../assets/img/bgimage");
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
